@@ -1,12 +1,21 @@
-MANIFEST
-ChangeLog
-Makefile.PL
 Build.PL
-README
+ChangeLog
+INSTALL
 lib/CPANPLUS/Shell/Default/Plugins/Prereqs.pm
-samples/coming_soon
+Makefile.PL
+MANIFEST
+META.yml			Module meta-data (added by MakeMaker)
+README
+samples/display-prereqs
 t/00-plugin.t
 t/01-core.t
+t/96-kwalitee.t
+t/97-critic.t
 t/98-pod.t
 t/99-podcoverage.t
-META.yml                                 Module meta-data (added by MakeMaker)
+t/build1/Build.PL
+t/build1/lib/CSDPR_Test.pm
+t/inc1/lib/CSDPR_Test.pm
+t/inc1/Makefile.PL
+t/mm1/Makefile.PL
+t/perlcriticrc
