@@ -22,7 +22,7 @@ use CPANPLUS::Internals::Constants;
 use Carp;
 use Data::Dumper;
 
-our $VERSION = '0.05';
+our $VERSION = '0.06';
 
 sub plugins { return (
             prereqs => 'install_prereqs',
