@@ -1,0 +1,5 @@
+package CSDPR_Test;
+
+our $VERSION = '0.02';
+
+1;
